--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <a class="contact-item-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </adress>
                 </div>
-                <div class="footer-right">
+                <div class="footer-center">
                     <div class="join-box">
                         <p class="join">присоединяйтесь</p>
                     </div>
@@ -370,6 +370,20 @@
                         </ul>
                     </div>
                 </div>
+                <div class="footer-right">
+                    <div class="footer-email-form">
+                    <label for="email-input-form" class="join footer-email-label">Подпишитесь на рассылку</label>
+                    <input type="email" placeholder="E-mail" class="footer-email-input" name="email" id="email-input-form" />
+                    </div>
+                    <div class="footer-button-box">
+                        <button type="submit" class="footer-button">
+                            <span>Подписаться</span>
+                            <svg class="footer-button-icon" width="24" height="24">
+                                <use href="./images/icons.svg#telegram-icon"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
@@ -383,21 +397,40 @@
 
             <form class="contact-form">
                 <p class="contact-form-title">Оставьте свои данные, мы вам перезвоним</p>
-                <label class="contact-form-field">Имя
-                    <input name="user_name" class="contact-form-input" type="text" />
+                <label class="contact-form-field">
+                    <span class="contact-form-field-title">Имя</span>
+                    <span class="contact-form-input-wrapper">
+                        <input name="user_name" class="contact-form-input" type="text" />
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#person-figure"></use>
+                        </svg>
+                    </span>
                 </label>
-                <label class="contact-form-field">Телефон
-                    <input name="user_phone" class="contact-form-input" type="tel" />
+                <label class="contact-form-field">
+                    <span class="contact-form-field-title">Телефон</span>
+                    <span class="contact-form-input-wrapper">
+                        <input name="user_phone" class="contact-form-input" type="tel" />
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#handset"></use>
+                        </svg>
+                    </span>
                 </label>
-                <label class="contact-form-field">Почта
-                    <input name="user_email" class="contact-form-input" type="email" />
+                <label class="contact-form-field">
+                    <span class="contact-form-field-title">Почта</span>
+                    <span class="contact-form-input-wrapper">
+                        <input name="user_email" class="contact-form-input" type="email" />
+                        <svg class="contact-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#envelope"></use>
+                        </svg>
+                    </span>
                 </label>
-                <label class="contact-form-field">Комментарий
+                <label class="contact-form-field">
+                    <span class="contact-form-field-title">Комментарий</span>
                     <textarea name="user_message" class="contact-form-message" placeholder="Введите текст"></textarea>
                 </label>
                 <div class="contact-form-checkbox-wrapper">
-                    <input name="accept-policy" type="checkbox" class="contact-form-checkbox" required/>
-                    <label for="" class="contact-form-checkbox-label">Соглашаюсь с рассылкой и принимаю <a href=""> Условия договора</a></label>
+                    <input name="accept-policy" type="checkbox" class="contact-form-checkbox visually-hidden" id="policy-checkbox" required/>
+                    <label for="policy-checkbox" class="contact-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&ensp;<a class="policy-terms" href="">Условия договора</a></label>
                 </div>
                 <button type="submit" class="contact-form-submit-button">Отправить</button>
             </form>
