--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
                         <a class="contact-item-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </adress>
                 </div>
-                <div class="footer-right">
+                <div class="footer-center">
                     <div class="join-box">
                         <p class="join">присоединяйтесь</p>
                     </div>
@@ -199,6 +199,20 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="footer-right">
+                    <div class="footer-email-form">
+                    <label for="email-input-form" class="join footer-email-label">Подпишитесь на рассылку</label>
+                    <input name="email" id="email-input-form" class="footer-email-input" type="email" placeholder="E-mail" />
+                    </div>
+                    <div class="footer-button-box">
+                        <button type="submit" class="footer-button">
+                            <span>Подписаться</span>
+                            <svg class="footer-button-icon" width="24" height="24">
+                                <use href="./images/icons.svg#telegram-icon"></use>
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
