--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,13 +21,13 @@
             <nav class="navigation">
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="nav-list-link nav-list-link-current link" href="index.html">Студия</a>
+                        <a class="nav-list-link nav-list-link-current link" href="index.html">Студія</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="portfolio.html">Портфолио</a>
+                        <a class="nav-list-link link" href="portfolio.html">Портфоліо</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="">Контакты</a>
+                        <a class="nav-list-link link" href="">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -52,9 +52,9 @@
         <section class="hero-section">
             <div class="container">
             <h1 class="main-title">
-                Эффективные решения для вашего бизнеса
+                Ефективні рішення для вашого бізнесу
             </h1>
-            <button class="modal-button" type="button" data-modal-close>Заказать услугу</button>
+            <button class="modal-button" type="button" data-modal-close>Замовити послугу</button>
             </div>
         </section>
         <section class="section">
@@ -66,8 +66,8 @@
                                 <use href="./images/icons.svg#antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="list-title">Внимание к деталям</h3>
-                        <p class="list-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="list-title">Увага до деталей</h3>
+                        <p class="list-description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="description-card">
                         <div class="icon-box">
@@ -75,8 +75,8 @@
                                 <use href="./images/icons.svg#clock"></use>
                             </svg>
                         </div>
-                        <h3 class="list-title">Пунктуальность</h3>
-                        <p class="list-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="list-title">Пунктуальність</h3>
+                        <p class="list-description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
                     <li class="description-card">
                         <div class="icon-box">
@@ -84,8 +84,8 @@
                                 <use href="./images/icons.svg#diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="list-title">Планирование</h3>
-                        <p class="list-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="list-title">Планування</h3>
+                        <p class="list-description">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="description-card">
                         <div class="icon-box">
@@ -93,27 +93,27 @@
                                 <use href="./images/icons.svg#astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="list-title">Современные технологии</h3>
-                        <p class="list-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="list-title">Сучасні технології</h3>
+                        <p class="list-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.p>
                     </li>
                 </ul>
             </div>
         </section>
         <section>
             <div class="container">
-                <h2 class="section-title">Чем мы занимаемся</h2>
+                <h2 class="section-title">Чим ми займаємося</h2>
                 <ul class="list computers">
                     <li>
                         <img class="card-img" src="./images/computer1.jpg" alt="фото компьютера" width="370" height="294">
-                        <p class="overlay-text">Десктопные приложения</p>
+                        <p class="overlay-text">Десктопні додатки</p>
                     </li>
                     <li>
                         <img class="card-img" src="./images/computer2.jpg" alt="фото компьютера" width="370" height="294">
-                        <p class="overlay-text">Мобильные приложения</p>
+                        <p class="overlay-text">Мобільні додатки</p>
                     </li>
                     <li>
                         <img class="card-img" src="./images/computer3.jpg" alt="фото компьютера" width="370" height="294">
-                        <p class="overlay-text">Дизайнерские решения</p>
+                        <p class="overlay-text">Дизайнерські рішення</p>
                     </li>
                 </ul>
             </div>
@@ -123,9 +123,9 @@
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="list employees">
                     <li class="employees-card">
-                        <img src="./images/team1.jpg" alt="фото сотрудника" width="270" height="260">
+                        <img src="./images/team1.jpg" alt="фото співробітника" width="270" height="260">
                         <div class="employee-card-wrapper">
-                            <h3 class="employee">Игорь Демьяненко</h3>
+                            <h3 class="employee">Ігор Дем'яненко</h3>
                             <p class="job-position" lang="en">Product Designer</p>
                             <ul class="icon-list list">
                                 <li>
@@ -160,9 +160,9 @@
                         </div>
                     </li>
                     <li class="employees-card">
-                        <img src="./images/team2.jpg" alt="фото сотрудника" width="270" height="260">
+                        <img src="./images/team2.jpg" alt="фото співробітника" width="270" height="260">
                         <div class="employee-card-wrapper">
-                            <h3 class="employee">Ольга Репина</h3>
+                            <h3 class="employee">Ольга Рєпіна</h3>
                             <p class="job-position" lang="en">Frontend Developer</p>
                             <ul class="icon-list list">
                                 <li>
@@ -197,9 +197,9 @@
                         </div>
                     </li>
                     <li class="employees-card">
-                        <img src="./images/team3.jpg" alt="фото сотрудника" width="270" height="260">
+                        <img src="./images/team3.jpg" alt="фото співробітника" width="270" height="260">
                         <div class="employee-card-wrapper">
-                            <h3 class="employee">Николай Тарасов</h3>
+                            <h3 class="employee">Микола Тарасов</h3>
                             <p class="job-position" lang="en">Marketing</p>
                             <ul class="icon-list list">
                                 <li>
@@ -234,9 +234,9 @@
                         </div>
                     </li>
                     <li class="employees-card">
-                        <img src="./images/team4.jpg" alt="фото сотрудника" width="270" height="260">
+                        <img src="./images/team4.jpg" alt="фото співробітника" width="270" height="260">
                         <div class="employee-card-wrapper">
-                            <h3 class="employee">Михаил Ермаков</h3>
+                            <h3 class="employee">Микола Єрмаков</h3>
                             <p class="job-position" lang="en">UI Designer</p>
                             <ul class="icon-list list">
                                 <li>
@@ -275,7 +275,7 @@
         </section>
         <section class="clients-section section">
             <div class="container">
-                <h2 class="section-title">Постоянные клиенты</h2>
+                <h2 class="section-title">Постійні клієнти</h2>
                 <ul class="list clients">
                     <li class="client-items">
                         <a class="client-icon-box" href="">
@@ -328,14 +328,14 @@
                 <div class="footer-left">
                     <a class="logo link logo-footer" href="./index.html"><span class="logo-part">Web</span>Studio</a>
                     <address class="location">
-                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                        <span>м. Київ, пр-т Лесі Українки, 26</span>
                         <a class="contact-item-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         <a class="contact-item-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </adress>
                 </div>
                 <div class="footer-center">
                     <div class="join-box">
-                        <p class="join">присоединяйтесь</p>
+                        <p class="join">приєднуйтесь/p>
                     </div>
                     <div class="footer-icon-box">
                         <ul class="footer-icon-list list">
@@ -372,12 +372,12 @@
                 </div>
                 <div class="footer-right">
                     <div class="footer-email-form">
-                    <label for="email-input-form" class="join footer-email-label">Подпишитесь на рассылку</label>
+                    <label for="email-input-form" class="join footer-email-label">Підпишіться на розсилку</label>
                     <input type="email" placeholder="E-mail" class="footer-email-input" name="email" id="email-input-form" />
                     </div>
                     <div class="footer-button-box">
                         <button type="submit" class="footer-button">
-                            <span>Подписаться</span>
+                            <span>Підписатися</span>
                             <svg class="footer-button-icon" width="24" height="24">
                                 <use href="./images/icons.svg#telegram-icon"></use>
                             </svg>
@@ -396,9 +396,9 @@
             </button>
 
             <form class="contact-form">
-                <p class="contact-form-title">Оставьте свои данные, мы вам перезвоним</p>
+                <p class="contact-form-title">Залиште свої дані, ми вам зателефонуєм</p>
                 <label class="contact-form-field">
-                    <span class="contact-form-field-title">Имя</span>
+                    <span class="contact-form-field-title">І'мя</span>
                     <span class="contact-form-input-wrapper">
                         <input name="user_name" class="contact-form-input" type="text" />
                         <svg class="contact-form-icon" width="18" height="18">
@@ -416,7 +416,7 @@
                     </span>
                 </label>
                 <label class="contact-form-field">
-                    <span class="contact-form-field-title">Почта</span>
+                    <span class="contact-form-field-title">Пошта</span>
                     <span class="contact-form-input-wrapper">
                         <input name="user_email" class="contact-form-input" type="email" />
                         <svg class="contact-form-icon" width="18" height="18">
@@ -425,14 +425,14 @@
                     </span>
                 </label>
                 <label class="contact-form-field">
-                    <span class="contact-form-field-title">Комментарий</span>
-                    <textarea name="user_message" class="contact-form-message" placeholder="Введите текст"></textarea>
+                    <span class="contact-form-field-title">Коментар</span>
+                    <textarea name="user_message" class="contact-form-message" placeholder="Введіть текст"></textarea>
                 </label>
                 <div class="contact-form-checkbox-wrapper">
                     <input name="accept-policy" type="checkbox" class="contact-form-checkbox visually-hidden" id="policy-checkbox" required/>
-                    <label for="policy-checkbox" class="contact-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&ensp;<a class="policy-terms" href="">Условия договора</a></label>
+                    <label for="policy-checkbox" class="contact-form-checkbox-label">Погоджуюсь з розсилкою та приймаю&ensp;<a class="policy-terms" href="">Умови договору</a></label>
                 </div>
-                <button type="submit" class="contact-form-submit-button">Отправить</button>
+                <button type="submit" class="contact-form-submit-button">Надіслати</button>
             </form>
         </div>
     </div>
