--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </div>
                 <div class="footer-center">
                     <div class="join-box">
-                        <p class="join">приєднуйтесь/p>
+                        <p class="join">приєднуйтесь</p>
                     </div>
                     <div class="footer-icon-box">
                         <ul class="footer-icon-list list">
