--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </svg>
                         </div>
                         <h3 class="list-title">Сучасні технології</h3>
-                        <p class="list-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.p>
+                        <p class="list-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.<p>
                     </li>
                 </ul>
             </div>
