--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,13 +21,13 @@
             <nav class="navigation">
                 <ul class="nav-list list">
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="index.html">Студия</a>
+                        <a class="nav-list-link link" href="index.html">Студія</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link nav-list-link-current link" href="portfolio.html">Портфолио</a>
+                        <a class="nav-list-link nav-list-link-current link" href="portfolio.html">Портфоліо</a>
                     </li>
                     <li class="nav-list-item">
-                        <a class="nav-list-link link" href="">Контакты</a>
+                        <a class="nav-list-link link" href="">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -51,11 +51,11 @@
     <main>
     <section class="section">
         <div class="container">
-            <h1 class="portfolio">Наше портфолио</h1>
+            <h1 class="portfolio">Наше портфоліо</h1>
                 <ul class="list buttons-list">
                     <li class="button-card"><button class="portfolio-button" type="button">Все</button></li>
-                    <li class="button-card"><button class="portfolio-button" type="button">Веб-сайты</button></li>
-                    <li class="button-card"><button class="portfolio-button" type="button">Приложения</button></li>
+                    <li class="button-card"><button class="portfolio-button" type="button">Веб-сайти</button></li>
+                    <li class="button-card"><button class="portfolio-button" type="button">Додатки</button></li>
                     <li class="button-card"><button class="portfolio-button" type="button">Дизайн</button></li>
                     <li class="button-card"><button class="portfolio-button" type="button">Маркетинг</button></li>
                 </ul>
