--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
                 <h2 class="section-title">Чим ми займаємося</h2>
                 <ul class="list computers">
                     <li>
-                        <img class="card-img" src="./images/computer1.jpg" alt="фото компьютера" width="370" height="294">
+                        <img class="card-img" src="./images/computer1.jpg" alt="фото комп`ютера" width="370" height="294">
                         <p class="overlay-text">Десктопні додатки</p>
                     </li>
                     <li>
-                        <img class="card-img" src="./images/computer2.jpg" alt="фото компьютера" width="370" height="294">
+                        <img class="card-img" src="./images/computer2.jpg" alt="фото комп`ютера" width="370" height="294">
                         <p class="overlay-text">Мобільні додатки</p>
                     </li>
                     <li>
-                        <img class="card-img" src="./images/computer3.jpg" alt="фото компьютера" width="370" height="294">
+                        <img class="card-img" src="./images/computer3.jpg" alt="фото комп`ютера" width="370" height="294">
                         <p class="overlay-text">Дизайнерські рішення</p>
                     </li>
                 </ul>
