--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
                 <ul class="list project-pics">
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project1.jpg" alt="фото проекта" width="370" height="294">
-                        <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <img src="./images/project1.jpg" alt="фото проекту" width="370" height="294">
+                        <p class="overlay">Технокряк це сучасна платформа розповсюдження коронавірусу. Компанії використовують цю платформу для цифрового шпіонажу та атак на захищені сервера конкурентів.</p>
                         </div>
                             <div class="project-card-wrapper">
                                 <h2 class="project-name">Технокряк</h2>
@@ -72,7 +72,7 @@
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project2.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project2.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore rem deleniti unde quod deserunt dolorem! In non dolores quo!</p>
                         </div>
                             <div class="project-card-wrapper">
@@ -82,16 +82,16 @@
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project3.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project3.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam vel et officiis sit ab, nostrum voluptas a totam adipisci.</p>
                         </div>
                             <div class="project-card-wrapper">
                                 <h2 class="project-name">Ресторан Seafood</h2>
-                                <p class="project-description">Приложение</p>
+                                <p class="project-description">Додаток</p>
                             </div>
                     </li>
                     <li class="project-card">
-                        <div class="project-card-list-wrapper"><img src="./images/project4.jpg" alt="фото проекта" width="370" height="294">
+                        <div class="project-card-list-wrapper"><img src="./images/project4.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia ipsum tempora ut quia autem expedita illo quis, culpa laborum.</p>
                         </div>
                             <div class="project-card-wrapper">
@@ -101,17 +101,17 @@
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project5.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project5.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloremque libero magnam voluptates architecto facere illo hic dolore. At?</p>
                         </div>
                             <div class="project-card-wrapper">
                                 <h2 class="project-name">Проект Boxes</h2>
-                                <p class="project-description">Приложение</p>
+                                <p class="project-description">Додаток</p>
                             </div>
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project6.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project6.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt assumenda quis animi? Fuga quos praesentium voluptatibus, inventore reprehenderit earum!</p>
                         </div>
                             <div class="project-card-wrapper">
@@ -125,13 +125,13 @@
                             <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, laboriosam officiis! Officia quis quidem aperiam voluptatum dicta omnis mollitia.\</p>
                         </div>
                             <div class="project-card-wrapper">
-                                <h2 class="project-name">Издание Limited Edition</h2>
+                                <h2 class="project-name">Видання Limited Edition</h2>
                                 <p class="project-description">Дизайн</p>
                             </div>
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project8.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project8.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur odit veritatis voluptates deserunt, dolor expedita quasi voluptate voluptas?</p>
                         </div>
                             <div class="project-card-wrapper">
@@ -141,12 +141,12 @@
                     </li>
                     <li class="project-card">
                         <div class="project-card-list-wrapper">
-                            <img src="./images/project9.jpg" alt="фото проекта" width="370" height="294">
+                            <img src="./images/project9.jpg" alt="фото проекту" width="370" height="294">
                             <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, architecto? Impedit repellat laborum deleniti atque nam. Doloribus, vitae praesentium.</p>
                         </div>
                             <div class="project-card-wrapper">
                                 <h2 class="project-name">Growing Business</h2>
-                                <p class="project-description">Приложение</p>
+                                <p class="project-description">Додаток</p>
                             </div>
                     </li>
                 </ul>
@@ -159,14 +159,14 @@
                 <div class="footer-left">
                     <a class="logo link logo-footer" href="./index.html"><span class="logo-part">Web</span>Studio</a>
                     <address class="location">
-                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                        <span>м. Київ, пр-т Лесі Українки, 26</span>
                         <a class="contact-item-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         <a class="contact-item-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </adress>
                 </div>
                 <div class="footer-center">
                     <div class="join-box">
-                        <p class="join">присоединяйтесь</p>
+                        <p class="join">приєднуйтесь</p>
                     </div>
                     <div class="footer-icon-box">
                         <ul class="footer-icon-list list">
@@ -203,12 +203,12 @@
                 </div>
                 <div class="footer-right">
                     <div class="footer-email-form">
-                    <label for="email-input-form" class="join footer-email-label">Подпишитесь на рассылку</label>
+                    <label for="email-input-form" class="join footer-email-label">підпишіться на розсилку</label>
                     <input name="email" id="email-input-form" class="footer-email-input" type="email" placeholder="E-mail" />
                     </div>
                     <div class="footer-button-box">
                         <button type="submit" class="footer-button">
-                            <span>Подписаться</span>
+                            <span>Підписатися</span>
                             <svg class="footer-button-icon" width="24" height="24">
                                 <use href="./images/icons.svg#telegram-icon"></use>
                             </svg>
