--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <li class="employees-card">
                         <img src="./images/team4.jpg" alt="фото співробітника" width="270" height="260">
                         <div class="employee-card-wrapper">
-                            <h3 class="employee">Микола Єрмаков</h3>
+                            <h3 class="employee">Михайло Єрмаков</h3>
                             <p class="job-position" lang="en">UI Designer</p>
                             <ul class="icon-list list">
                                 <li>
